--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,43 @@
 <resources>
-    <string name="app_name">Spent Conviction Calculator</string>
+    <string name="app_name">PrisonApp</string>
+    <string name="dob">DOB at the time last crime was committed</string>
+    <string name="conviction_date">Date of the last conviction</string>
+    <string name="offense_catagory">Category of Offense</string>
+    <string name="which_court">Which Court?</string>
+    <string name="no_of_convictions">Number of Convictions?</string>
+    <string name="no_of_convictions_hint">enter number of convictions here</string>
+    <string name="suspended">Suspended Sentence?</string>
+    <string name="not_suspended">Not Suspended?</string>
+    <string name="punishment_recieved">Punishment Received?</string>
+    <string name="submit">submit</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    
+    <array name="court_list_array">
+        <item>District Court</item>
+        <item>Circuit Court</item>
+        <item>Central Criminal Court</item>
+        <item>Special Criminal Court</item>
+    </array>
+
+    <array name="offense_array">
+        <item>Public order offense</item>
+        <item>Sexual offense</item>
+        <item>Insurance Fraud</item>
+        <item>Assault</item>
+        <item>Dangerous Driving</item>
+        <item>Other Motoring Offense</item>
+        <item>All Other Offenses</item>
+    </array>
+
+    <array name="punishment_array">
+        <item>Prison greater than 12 months</item>
+        <item>Suspended sentence greater than 24 months</item>
+        <item>Probation greater than 24 months</item>
+
+        <item>Other</item>
+        <item>None</item>
+    </array>
+    
+    
 </resources>
