padding and button changes by Chrissy

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,37 +1,35 @@
 <resources>
-    <string name="mission_statement">Vision and Mission
+    <string name="mission_statement">Vision and Mission\n
 
-Our Vision expresses the fundamental objectives of IPRT, which underpin all of our work:
+Our Vision expresses the fundamental objectives of IPRT, which underpin all of our work:\n
 
-IPRT’s Vision
+IPRT’s Vision to have respect for rights in the penal system with prison as a last resort.
 
-Respect for rights in the penal system with prison as a last resort.
+To achieve this Vision, IPRT commits itself to achieving a number of specific objectives. These objectives are set out in the Mission Statement of the organization:/n
 
-To achieve this Vision, IPRT commits itself to achieving a number of specific objectives. These objectives are set out in the Mission Statement of the organization:
-
-IPRT’s Mission Statement
+IPRT’s Mission Statement.\n
 
 IPRT is committed to respecting the rights of everyone in the penal system and to reducing imprisonment. We are working towards progressive reform of the penal system based on evidence-led policies and on a commitment to combating social injustice. IPRT will achieve our goals through effecting changes in policy, in practice, in law and through influencing public opinion.
 
-All of IPRT’s work is underpinned and informed by our Values as an organization:
+All of IPRT’s work is underpinned and informed by our Values as an organization:\n
 
-IPRT’s Values
+IPRT’s Values\n
 
-Respect for human rights and a commitment to combating social injustice
+Respect for human rights and a commitment to combating social injustice\n
 
-Advocacy based on research and evidence-led policies
+Advocacy based on research and evidence-led policies\n
 
-Working constructively with others in the penal system
-About Us
+Working constructively with others in the penal system\n
+About Us\n
 
-    Why Penal Reform?
-    IPRT Patron and Advocates
-    IPRT Vision and Mission
-    Who we are
-    What we do
-    How we are funded
-    What we have achieved
-    Governance and Best Practice
+    Why Penal Reform?\n
+    IPRT Patron and Advocates\n
+    IPRT Vision and Mission\n
+    Who we are\n
+    What we do\n
+    How we are funded\n
+    What we have achieved\n
+    Governance and Best Practice\n
 
 </string>
 
