changed mission statement string to instructions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,7 +97,7 @@ Working constructively with others in the penal system\n
     <string name="charity4Phone">018 78 0901</string>
 
     <!--Tomas strings-->
-    <string name="mission_statement_main_scr">Mission Statement</string>
+    <string name="mission_statement_main_scr">Instructions</string>
     <string name="form_main_scr">Form</string>
     <string name="external_links_main_scr">External Links</string>
     <string name="about_manin_scr">About</string>
