--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,42 +1,9 @@
 <resources>
-    <string name="mission_statement"><u><b>Vision and Mission</b></u>\n
-
-Our Vision expresses the fundamental objectives of IPRT, which underpin all of our work:\n
-
-IPRT’s Vision to have respect for rights in the penal system with prison as a last resort.
-
-To achieve this Vision, IPRT commits itself to achieving a number of specific objectives. These objectives are set out in the Mission Statement of the organization:
-
-\n<u><b>IPRT’s Mission Statement.</b></u>\n
-IPRT is committed to respecting the rights of everyone in the penal system and to reducing imprisonment. We are working towards progressive reform of the penal system based on evidence-led policies and on a commitment to combating social injustice. IPRT will achieve our goals through effecting changes in policy, in practice, in law and through influencing public opinion.
-
-All of IPRT’s work is underpinned and informed by our Values as an organization:\n
-
-<u><b>IPRT’s Values</b></u>\n
-
-Respect for human rights and a commitment to combating social injustice\n
-
-Advocacy based on research and evidence-led policies\n
-
-Working constructively with others in the penal system\n
-<u><b>About Us</b></u>\n
-
-    Why Penal Reform?\n
-    IPRT Patron and Advocates\n
-    IPRT Vision and Mission\n
-    Who we are\n
-    What we do\n
-    How we are funded\n
-    What we have achieved\n
-    Governance and Best Practice\n
-
-</string>
-
     <string name="instructions_title"><u><b>Instructions</b></u></string>
 
-    <string name="form_instructions_page_button"><u><b>Form: </b></u> The questionnaire page is designed to help you calculate your convictions and guide you on which step to take next</string>
-    <string name="external_links_instructions_page_button"><u><b>External Links: </b></u>Helpful informative Links to various websites that might be useful to our Users.</string>
-    <string name="about_instructions_page_button"><u><b>About: </b></u>This is an informative page about IPRT and their Mission statement and objectives\n  Users can also find information on the team that created this APP</string>
+    <string name="form_instructions_page_button"><u><b>Form: </b></u> Questionnaire page is designed to help you calculate your convictions and guide you on which step to take next.</string>
+    <string name="external_links_instructions_page_button"><u><b>External Links: </b></u>Helpful links to various websites that might be useful.</string>
+    <string name="about_instructions_page_button"><u><b>About: </b></u>An informative page about IPRT, their mission statement and objectives.\nAs well as information on the team which created this App.</string>
 
 
     <string name="calculator_link">Click To Calculate </string>
@@ -81,7 +48,6 @@ Working constructively with others in the penal system\n
         <item>Other</item>
 
     </array>
-
 
     <!--Strings for external Links page-->
     <string name="charity1"><a href="http://www.iasio.ie">www.iasio.ie    </a></string>
@@ -155,7 +121,7 @@ Working constructively with others in the penal system\n
 
     <string name="josh_name">Josh Carroll</string>
 
-    <string name="tomas_name">Tomas Gabor</string>
+    <string name="tomas_name">Tomas G.</string>
 
     <string name="credits_string">Developers:</string>
 
