--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,6 +62,47 @@
     <string name="charity4"><a href="http://www.bridge.ie">www.bridge.ie</a></string>
     <string name="charity4Phone">018 78 0901</string>
 
+
+    <!--for the external links pop ups-->
+    <string name="alert_title1"><u>\tCare After Prison</u></string>
+    <string name="alert_message1">\n<b>website:</b>www.careafterprison.ie
+                                    \n<b>email:</b>info@careafterprison.ie
+                                    \n<b>phone:</b>01 4720973
+                                    \n\nCare After Prison is a peer led charity organisation which provides
+                                    \nInformation, support and referral for ex-offenders their families and
+                                    \nvictims of crime</string>
+
+    <string name="alert_title2"><u>\tThe U-Casadh Project</u></string>
+    <string name="alert_message2">\n<b>website:</b>www.ucasadh.ie
+                                    \n<b>email:</b>press@ucasadh.ie
+                                    \n<b>phone:</b>051 830479
+                                    \n\nWe are a social inclusion project and registered charity
+        \nbased on the border of Waterford and Kilkenny.  Our
+        \nmission is to be a catalyst for change in attitudes to crime,
+        \nsocial exclusion, rehabilitation and justice.</string>
+
+    <string name="alert_title3"><u>\tBridge</u></string>
+    <string name="alert_message3">\n<b>website:</b>www.bridge.ie
+                                    \n<b>email:</b>siobhan@bridge.ie
+                                    \n<b>phone:</b>01 8780901
+                                    \n\nThere are a number of exciting developments taking place for Bridge in 2015
+        \nwith one of them being the launch of our new website.
+        \nWe expect it to be up and running by the end of February so check back then to find out what we do.</string>
+
+    <string name="alert_title4"><u>\tIrish Association for the Social Integration of Offenders</u></string>
+    <string name="alert_message4">\n<b>website:</b>www.iasio.ie
+                                    \n<b>email:</b>prichardson@iasio.ie
+                                    \n<b>phone:</b>01 8662706
+                                    \n\nAs a large community based organisation with a national remit IASIO works
+        \n with adult offenders in the criminal justice system with a specific focus on alternatives to offending,
+        \ncustody and re-imprisonment. This is achieved through the provision of direct
+        \nservices to offenders both in the community and in all Irish prisons.</string>
+
+    <string name="alert_agree_option1">top</string>
+    <string name="alert_disagree_option1">back</string>
+    <string name="alert_disagree_toast1">Returning to external Links page</string>
+
+
     <!--Tomas strings-->
     <string name="mission_statement_main_scr">Instructions</string>
     <string name="form_main_scr">Form</string>
